--- a/Buttons/wwwroot/css/site.css
+++ b/Buttons/wwwroot/css/site.css
@@ -8,11 +8,6 @@ body {
     padding: 1rem;
 }
 
-.filled {
-    width: 100%;
-    height: 100%;
-}
-
 button, input, label {
     transition: 0.25s;
     font-size: 1.5rem;
